@@ -29,7 +29,7 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-          <root url="jar://$MODULE_DIR$/../../lib/lucene-analyzers-common-4.2.0.jar!/" />
+          <root url="jar://$MODULE_DIR$/../../lib/lucene-analyzers-common-4.2.1.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
@@ -38,16 +38,18 @@
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-          <root url="jar://$MODULE_DIR$/../../lib/lucene-core-4.2.0.jar!/" />
+          <root url="jar://$MODULE_DIR$/../../lib/lucene-core-4.2.1.jar!/" />
         </CLASSES>
         <JAVADOC />
-        <SOURCES />
+        <SOURCES>
+          <root url="file://$MODULE_DIR$/../../../../lucene-4.2.1/src/core/src/java" />
+        </SOURCES>
       </library>
     </orderEntry>
     <orderEntry type="module-library">
       <library>
         <CLASSES>
-          <root url="jar://$MODULE_DIR$/../../lib/lucene-queryparser-4.2.0.jar!/" />
+          <root url="jar://$MODULE_DIR$/../../lib/lucene-queryparser-4.2.1.jar!/" />
         </CLASSES>
         <JAVADOC />
         <SOURCES />
