@@ -1,3 +1,5 @@
+#Properties of this specific CALIPH build
+#Mon, 24 Jun 2013 18:15:24 +0200
 #
 # This file is part of the LIRE project: http://www.semanticmetadata.net/lire
 # LIRE is free software; you can redistribute it and/or modify
@@ -42,5 +44,5 @@
 #Properties of this specific CALIPH build
 #Tue, 09 Apr 2013 13:39:22 +0200
 #Wed Sep 07 12:25:27 CEST 2011
-build-date=2013/06/23 18\:22
-build-number=181
+build-date=2013/06/24 18\:15
+build-number=182
